Scrollbar fix

--- a/src/sections/presentations.scss
+++ b/src/sections/presentations.scss
@@ -308,10 +308,10 @@ $panel-width: 290px;
 
 .active-onboard-mode {
   .workspace-board {
-   height: calc(100vh - 185px);
+   height: calc(100vh - 225px);
   }
   .workspace-sidebar {
-    height: calc(100vh - 190px);
+    height: calc(100vh - 225px);
   }
 }
 
